<resources>
    <string name="app_name">Inventory App</string>
    <string name="table_feedback">The product inventory contains %1$d products.\n\n</string>
    <string name="toast_failed_save">Error with saving product</string>
    <string name="editor_activity_title_new_product"> Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Entries</string>
    <string name="action_add_product_message">A product with id %1$d has been added
        to the database</string>
    <string name="category_overview">Overview</string>
    <string name="category_supplier">Supplier</string>
    <string name="category_quantity">Quantity</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone">Phone Number</string>
    <string name="empty_view_title_text">No Inventory Data</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="editor_insert_product_failed">Failed to Add Product</string>
    <string name="editor_insert_product_success">Product Added</string>
    <string name="editor_update_product_failed">Product Update Failed</string>
    <string name="editor_update_product_success">Product Updated</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error deleting product</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_all_dialog_msg">Delete all products in database?</string>
    <string name="delete_all">Delete All</string>
    <string name="negative_quantity">Quantity cannot be negative</string>
    <string name="negative_price">Price cannot be negative</string>
    <string name="sale_button_text">Sale</string>
    <string name="invalid_name_input">Product requires a name</string>
    <string name="invalid_price_input">Invalid price input</string>
    <string name="invalid_quantity_input">Invalid quantity input</string>
    <string name="minus_button">-</string>
    <string name="plus_button">+</string>
    <string name="editor_default_quantity">0</string>
    <string name="product_currency">$</string>
    <string name="catalog_quantity_label">Quantity: </string>
    <string name="action_call_supplier">Call Supplier</string>
    <string name="call_failed_msg">Failed to pass Call Intent</string>
</resources>
