<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:id="@+id/container_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle"
            tools:text="Overview" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_product_name"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords"
                tools:text="Product Name"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_product_price"
                android:hint="@string/hint_product_price"
                android:inputType="numberDecimal"
                tools:text="$10.00"
                style="@style/EditorFieldStyle" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle"
            tools:text="Quantity"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/editor_minus_button"
                style="@style/EditorButtonsStyle"
                android:text="@string/minus_button"
                android:onClick="decrement" />

            <TextView
                android:id="@+id/editor_quantity_view"
                style="@style/EditorQuantityTextView"
                android:text="@string/editor_default_quantity"/>

            <Button
                android:id="@+id/editor_plus_button"
                style="@style/EditorButtonsStyle"
                android:text="@string/plus_button"
                android:onClick="increment" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/container_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:text="@string/category_supplier"
            style="@style/CategoryStyle"
            tools:text="Supplier" />

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edit_supplier_name"
                android:hint="@string/hint_supplier_name"
                android:inputType="textCapWords"
                tools:text="Supplier Name"
                style="@style/EditorFieldStyle" />

            <EditText
                android:id="@+id/edit_supplier_phone"
                android:hint="@string/hint_supplier_phone"
                android:inputType="phone"
                tools:text="1-800-888-5555"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>